Force CSS cache refresh for production input styling

--- a/public/scss/layout/form.scss
+++ b/public/scss/layout/form.scss
@@ -248,7 +248,7 @@ textarea {
     }
 }
 
-// Most specific selectors for each form
+// Most specific selectors for each form - Production Fix
 #coffee-form input[type=text],
 #gadget-form input[type=text],
 #brew-form input[type=text],
